# mAIDA

./: .gitignore  CMakeLists.txt  README  Setup.sh  clean.sh
config/: atldirs.txt  mvacuts.txt  mvacuts_SS_EU.txt  mvalist.txt  mvalist_aida.txt  mvalist_full.txt  setupevn.sh
doc/: dox.cfg
include/: FinalState.h  FinalStateFiller.h  Jet.h  Lepton.h  LeptonPair.h  LinkDef.h  MVARunner.h  MVASigBkg.h  PhysicsObject.h  Reader.h  Swizzler.h  Utils.h  VariableFiller.h
include/mAIDA/: FinalState.h  Jet.h  Lepton.h  LeptonPair.h  LinkDef.h  MVARunner.h  PhysicsObject.h  Reader.h  Swizzler.h  Utils.h
modules/: FindROOT.cmake
plotting/: CMakeLists.txt  njets_MET.cpp
producers/: CMakeLists.txt  fst.cxx  mAIDA.cxx  mAIDAmva.cxx
python/: check_swizzdiff.py  count.py  crosscheck.py  fsf.py  mvaplots.py  njetMETplot.py  plots.py  psplots.py  pymAIDA  pystyle.py  run.py  vrun.py
readers/: CMakeLists.txt  mvareader.cpp
sb/: CMakeLists.txt  sb.cxx
src/: FinalState.cxx  FinalStateFiller.cxx  Jet.cxx  Lepton.cxx  LeptonPair.cxx  MVARunner.cxx  MVASigBkg.cxx  PhysicsObject.cxx  Reader.cxx  Swizzler.cxx  Swizzler.cxx_nozip  Swizzler.cxx_old  Swizzler.cxx_with_zip  VariableFiller.cxx
